# PixelAdventure

./: .gitignore  CMakeLists.txt  README.md
assets/textures/: dimensions.txt
data/checkpoints/: animations.json
data/death_particles/: animations.json
data/finish_cup/: animations.json
data/gui/: 1.tsx  10.tsx  11.tsx  2.tsx  3.tsx  4.tsx  5.tsx  board.tsx  button.tsx  gui.tiled-session  paper.tsx  slider.tsx
data/map/: map.tmx  terrain.tsx
data/maps/: map_1.json  map_1.tmx  maps.tiled-session
data/player/: animations.json  platformer_data.json  player_textures.json
data/settings/: settings.json
data/tmx/: test_map.csv  test_map.tmj  test_map.tmx  test_map.tsx
data/traps/fire_trap/: animations.json
data/traps/spike_head/: animations.json
src/: game.cpp  game.hpp
src/animation/: animation.cpp  animation.hpp  animation_interface.hpp  animation_manager.cpp  animation_manager.hpp  looping_animation.cpp  looping_animation.hpp  non_looping_animation.cpp  non_looping_animation.hpp  sprite_sheet.cpp  sprite_sheet.hpp
src/asset_managers/: asset_manager.hpp  asset_manager.inl  font_manager.hpp  music_manager.hpp  sound_buffer_manager.hpp  texture_manager.hpp
src/audio/: music_player.cpp  music_player.hpp  sound_player.cpp  sound_player.hpp
src/camera/: camera.cpp  camera.hpp
src/enums/: orientation.hpp  origin.hpp  particle_type.hpp  state_identifiers.hpp
src/gui/: button.cpp  button.hpp  cursor.cpp  cursor.hpp  gui_builder.cpp  gui_builder.hpp  gui_button.cpp  gui_button.hpp  gui_button_base.cpp  gui_button_base.hpp  gui_component.cpp  gui_component.hpp  gui_container.cpp  gui_container.hpp  gui_element.cpp  gui_element.hpp  gui_includes.hpp  gui_slider.cpp  gui_slider.hpp  gui_sprite.cpp  gui_sprite.hpp  gui_text.cpp  gui_text.hpp  includes.hpp  paper_label.cpp  paper_label.hpp  slider.cpp  slider.hpp  sprite_element.cpp  sprite_element.hpp  text_button.cpp  text_button.hpp  text_element.cpp  text_element.hpp
src/scrolling_background/: scrolling_background.cpp  scrolling_background.hpp
src/states/: game_context.hpp  game_over_state.cpp  game_over_state.hpp  game_state.cpp  game_state.hpp  key_binding_state.cpp  key_binding_state.hpp  levels_state.cpp  levels_state.hpp  loading_state.cpp  loading_state.hpp  main_menu_state.cpp  main_menu_state.hpp  menu_state.cpp  menu_state.hpp  pause_state.cpp  pause_state.hpp  pre_game_loading_state.cpp  pre_game_loading_state.hpp  settings_state.cpp  settings_state.hpp  state.cpp  state.hpp  state_factory.cpp  state_factory.hpp  state_identifiers.hpp  state_stack.cpp  state_stack.hpp
src/structs/: colors.hpp  level_details.hpp  line_path.hpp  map_data.hpp  player_data.hpp  settings.hpp
src/utilities/: easing_functions.cpp  easing_functions.hpp  gui_utils.cpp  gui_utils.hpp  utils.cpp  utils.hpp
src/world/: back_ground.cpp  back_ground.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  checkpoint.cpp  checkpoint.hpp  checkpoint_manager.cpp  checkpoint_manager.hpp  collision.cpp  collision.hpp  cursor.cpp  enums.hpp  finish_cup.cpp  finish_cup.hpp  movable_object.cpp  movable_object.hpp  parallel_task.hpp  player.cpp  player.hpp  scrolling_background.cpp  sprite_collider.cpp  sprite_collider.hpp  tile_map.cpp  tile_map.hpp  tiled_json_loader.cpp  tiled_json_loader.hpp  tiled_json_loader.inl  world.cpp  world.hpp
src/world/checkpoint/: checkpoint.cpp  checkpoint.hpp  checkpoint_manager.cpp  checkpoint_manager.hpp
src/world/enemies/: spike.cpp  spike.hpp
src/world/enemies/spikes/: spike.cpp  spike.hpp  spike_manager.cpp  spike_manager.hpp
src/world/fruits/: fruit.cpp  fruit.hpp  fruit_manager.cpp  fruit_manager.hpp
src/world/particles/: death_particle.cpp  death_particle.hpp  death_particle_system.cpp  death_particle_system.hpp
src/world/player/: death_state.cpp  death_state.hpp  double_jumping_state.cpp  double_jumping_state.hpp  falling_state.cpp  falling_state.hpp  idle_state.cpp  idle_state.hpp  jumping_state.cpp  jumping_state.hpp  player.cpp  player.hpp  player_data.hpp  player_platformer_data.hpp  player_state.hpp  respawning_state.cpp  respawning_state.hpp  running_state.cpp  running_state.hpp  wall_sliding_state.cpp  wall_sliding_state.hpp
src/world/traps/: trap.hpp  trap_manager.cpp  trap_manager.hpp
src/world/traps/fire_trap/: fire_trap.cpp  fire_trap.hpp  fire_trap_manager.cpp  fire_trap_manager.hpp
src/world/traps/saw/: chain_saw.cpp  chain_saw.hpp  floor_saw.cpp  floor_saw.hpp  saw.cpp  saw.hpp  saw_manager.cpp  saw_manager.hpp
src/world/traps/spike_head/: spike_head.cpp  spike_head.hpp
src/world/traps/spiked_ball/: circular_spiked_ball.cpp  circular_spiked_ball.hpp  pendulum_spiked_ball.cpp  pendulum_spiked_ball.hpp  spiked_ball.cpp  spiked_ball.hpp
src/world/traps/spikes/: spike.cpp  spike.hpp  spike_manager.cpp
